Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-39213

createWindowContainer doesn't play nice with Drag & Drop

    XMLWordPrintable

Details

    • 75834c223295b6b0e335521370c7c9a6cdca5664

    Description

      Scenario: I print out the events going to my QQuickView. If the QQuickView is a window and I drag some text from my web browser onto the view, I get drag events. When I use createWindowContainer it no longer gets the drag events. I'm not sure where those events are going, but I assume the proper functionality would be to forward them to the embedded window.

      Attachments

        1. QuickViewDrag.zip
          3 kB
          Simon Gemmell
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            lagocs Laszlo Agocs
            gemmell Simon Gemmell
            Votes:
            2 Vote for this issue
            Watchers:
            5 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes